k8s-deploy/k8s/ingress/axon-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: axon
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/limit-rps: '100'
  name: axon-ingress
spec:
  rules:
  - host: axon1-testnet-monitor.nervos.tech
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: axon1
            port:
              number: 8100

  - host: axon2-testnet-monitor.nervos.tech
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
           service:
             name: axon2
             port:
               number: 8100

  - host: axon3-testnet-monitor.nervos.tech
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
           service:
             name: axon3
             port:
               number: 8100

  - host: axon4-testnet-monitor.nervos.tech
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
           service:
             name: axon4
             port:
               number: 8100
